# boids

./: Cargo.toml
src/: boids.rs  main.rs  settings.rs
